clang/test/BSC/Negative/Trait/r3/member_func_for_trait/member_func_for_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this, int a);
};

trait F::getA(); // expected-error {{expected identifier or '('}}